--- a/reports/6-learning-sound-names/report.Rmd
+++ b/reports/6-learning-sound-names/report.Rmd
@@ -10,7 +10,8 @@ library(knitr)
 opts_chunk$set(
   echo = FALSE,
   message = FALSE,
-  warning = FALSE
+  warning = FALSE,
+  fig.path = "figs/"
 )
 read_chunk("results.R")
 read_chunk("../theme.R")
@@ -21,6 +22,9 @@ read_chunk("../theme.R")
 ```
 
 ```{r 6-setup}
+```
+
+```{r 6-errors}
 ```
 
 ```{r 6-rts-over-trials}
