Completed block transition analysis

--- a/reports/6-learning-sound-names/report.Rmd
+++ b/reports/6-learning-sound-names/report.Rmd
@@ -42,5 +42,13 @@ read_chunk("../theme.R")
 ```{r 6-rts-over-trials}
 ```
 
-```{r 6-results, fig.width = 8}
+```{r 6-rt-transition-mod, echo = 1}
+```
+
+```{r 6-rt-transition-mod-results}
+broom::tidy(transition_mod, effects = "fixed") %>%
+  knitr::kable()
+```
+
+```{r 6-rt-transition-plot}
 ```
